--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Project created for Roc8 Moonshot"
     />
+    <meta name="keywords" content="HTML, CSS, JavaScript,React,Chess,knight movement,ROC8, moonshot">
+    <meta name="author" content="Sreejith">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
